feat: Implementa el controlador para Vehiculos [Marcos]